# Shade

./: .gitignore  Batch.shb  Cargo.toml  README.md
.cargo/: config
.github/workflows/: CargoBatch.yml  Test-Helper.yml
Bootloader/Interface/: Cargo.toml
Bootloader/Interface/src/: bootloader.rs  framebuffer.rs  lib.rs
Bootloader/Uefi/: Cargo.toml
Bootloader/Uefi/.cargo/: config
Bootloader/Uefi/src/: allocator.rs  filesystem.rs  framebuffer.rs  kernel.rs  main.rs  string.rs
Bootloaders/Interfaces/: Cargo.toml
Bootloaders/Interfaces/src/: boot.rs  kernel.rs  lib.rs  optional.rs
Bootloaders/Interfaces/src/video/: framebuffer.rs  mod.rs
Bootloaders/Uefi/: Cargo.toml
Bootloaders/Uefi/src/: main.rs
Helper/: Cargo.toml
Helper/src/: cargo.rs  configs.rs  folders.rs  main.rs  target.rs  targets.rs  test.rs
Helper/src/commands/: batch.rs  mod.rs
Helper/src/commands/run/: mod.rs  qemu.rs
Helper/src/emulators/: qemu.rs
Helper/src/filesystems/: fat.rs  mod.rs
Helper/src/image/: create.rs  mod.rs
Helper/src/image/filesystem/: fat.rs  mod.rs
Kernel/: Cargo.toml
Kernel/.cargo/: config
Kernel/src/: main.rs
Libraries/Config/: Cargo.toml
Libraries/ShadeConfig/: Cargo.toml
Libraries/ShadeConfig/src/: fields.rs  file.rs  lib.rs  object.rs  path.rs  std.rs
